--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mdbootstrap": "^4.14.0",
+    "ros3d": "^1.0.1",
     "roslib": "^1.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
