Changed CMakeLists.txt to add libraries

--- a/catkin_ws/src/world_mapper/CMakeLists.txt
+++ b/catkin_ws/src/world_mapper/CMakeLists.txt
@@ -211,4 +211,6 @@ include_directories(
 # catkin_add_nosetests(test)
 
 add_executable(framewriter src/framewriter.cpp)
-target_link_libraries(arduino_reader ${catkin_LIBRARIES})
+target_link_libraries(framewriter ${catkin_LIBRARIES})
+target_link_libraries(framewriter lib/json/include)
+target_link_libraries(framewriter lib/opencv/include)
