--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "json"]
 	path = catkin_ws/src/world_mapper/lib/json
 	url = https://github.com/nlohmann/json.git
+[submodule "serial"]
+	path = catkin_ws/src/world_mapper/lib/serial
+	url = https://github.com/wjwwood/serial
