Fixed compile errors and broken links

--- a/catkin_ws/src/world_mapper/CMakeLists.txt
+++ b/catkin_ws/src/world_mapper/CMakeLists.txt
@@ -212,6 +212,20 @@ target_include_directories(framewriter PUBLIC lib/json/include)
 target_include_directories(framewriter PUBLIC lib/opencv/include)
 add_dependencies(framewriter world_mapper_generate_messages_cpp)
 
+set(serial_SRCS lib/serial/src/serial.cc lib/serial/include/serial/serial.h lib/serial/include/serial/v8stdint.h lib/serial/src/impl/list_ports/list_ports_linux.cc)
+if (UNIX)
+  list(APPEND serial_SRCS lib/serial/src/impl/unix.cc)
+else()
+  list(APPEND serial_SRCS lib/serial/src/impl/win.cc)
+endif()
+
+add_library(serial ${serial_SRCS})
+if (UNIX AND NOT APPLE)
+  target_link_libraries(serial rt)
+endif()
+target_include_directories(serial PUBLIC lib/serial/include)
+
 add_executable(imureader src/imureader.cpp)
 target_link_libraries(imureader ${catkin_LIBRARIES})
+target_link_libraries(imureader serial)
 target_include_directories(imureader PUBLIC lib/serial/include)
