--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ros3d": "^1.0.1",
     "roslib": "^1.1.0",
     "rxjs": "~6.5.4",
+    "three": "^0.115.0",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
