--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Assets/ros-sharp.wiki"]
+[submodule "rossharpwiki"]
 	path = Assets/ros-sharp.wiki
 	url = https://github.com/siemens/ros-sharp.wiki.git
