--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -134,6 +134,11 @@
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfRobot.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisual.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisuals.cs" />
+    <Compile Include="Assets\Scripts\HeaderMenuController.cs" />
+    <Compile Include="Assets\Scripts\MainPanelController.cs" />
+    <Compile Include="Assets\Scripts\OpenProjectButton.cs" />
+    <Compile Include="Assets\Scripts\PanelController.cs" />
+    <Compile Include="Assets\Scripts\ProjectScene.cs" />
     <Compile Include="Assets\Scripts\TopScene.cs" />
     <Compile Include="Assets\Scripts\old\CP_layout.cs" />
     <Compile Include="Assets\Scripts\old\click_button.cs" />
