--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "resolveJsonModule": true,
+    "target": "es6",
     "lib": [
       "es2018",
       "dom"
     ]
   },
+  "include": [ "./src/**/*.ts" ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
