update file browser

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -135,14 +135,12 @@
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisual.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisuals.cs" />
     <Compile Include="Assets\RosSharpMessages\WorldMapper\msg\Frame.cs" />
-    <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\FileManager.cs" />
     <Compile Include="Assets\Scripts\FrameManager.cs" />
     <Compile Include="Assets\Scripts\HeaderMenuController.cs" />
     <Compile Include="Assets\Scripts\MainPanelController.cs" />
     <Compile Include="Assets\Scripts\OpenProjectButton.cs" />
     <Compile Include="Assets\Scripts\PanelController.cs" />
-    <Compile Include="Assets\Scripts\Point.cs" />
     <Compile Include="Assets\Scripts\PointCloudManager.cs" />
     <Compile Include="Assets\Scripts\ProjectFileBrowserPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectFileManagerPanel.cs" />
@@ -156,6 +154,7 @@
     <Compile Include="Assets\Scripts\ProjectViewPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectWindowPanel.cs" />
     <Compile Include="Assets\Scripts\TopScene.cs" />
+    <Compile Include="Assets\Scripts\fileButtonControl.cs" />
     <Compile Include="Assets\Scripts\old\CP_layout.cs" />
     <Compile Include="Assets\Scripts\old\click_button.cs" />
     <Compile Include="Assets\Scripts\old\create_new_project_screen_management.cs" />
