Added view options

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -135,19 +135,20 @@
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisual.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Urdf\UrdfComponents\UrdfVisuals.cs" />
     <Compile Include="Assets\RosSharpMessages\WorldMapper\msg\Frame.cs" />
+    <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\FrameListener.cs" />
     <Compile Include="Assets\Scripts\FrameManager.cs" />
     <Compile Include="Assets\Scripts\HeaderMenuController.cs" />
     <Compile Include="Assets\Scripts\MainPanelController.cs" />
     <Compile Include="Assets\Scripts\OpenProjectButton.cs" />
     <Compile Include="Assets\Scripts\PanelController.cs" />
+    <Compile Include="Assets\Scripts\Point.cs" />
     <Compile Include="Assets\Scripts\PointCloudManager.cs" />
     <Compile Include="Assets\Scripts\ProjectFileBrowserPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectFileManagerPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectFilePanel.cs" />
     <Compile Include="Assets\Scripts\ProjectFileViewerPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectLiveConnectPanel.cs" />
-    <Compile Include="Assets\Scripts\ProjectManager.cs" />
     <Compile Include="Assets\Scripts\ProjectOptionsMenu.cs" />
     <Compile Include="Assets\Scripts\ProjectReconstructPanel.cs" />
     <Compile Include="Assets\Scripts\ProjectScene.cs" />
